Observation - Implement uploadMedia and deleteMedia
